<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp"
                android:scaleType="fitXY"
                android:src="@android:drawable/arrow_up_float" />

            <ImageView
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:outlineSpotShadowColor="@color/white"
                android:outlineAmbientShadowColor="@color/white"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/ic_row" />
        </FrameLayout>

        <TextView
            android:id="@+id/item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/Tittle"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:src="@drawable/total1"
            android:layout_gravity="left" />

        <TextView
            android:id="@+id/item_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:text="@string/Detail"
            android:textSize="@dimen/_15sdp" />

        <Button
            android:id="@+id/bantu"
            android:layout_centerInParent="true"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/redooo"
            android:text="@string/bantu"
            android:textColor="@color/white"
            android:layout_gravity="center" />
    </LinearLayout>
</ScrollView>

